# GaitForge

./: CMakeLists.txt  main.cpp  readme
include/: line.hpp  math_utilitys.hpp  render_utils.hpp
src/: line.cpp  math_utilitys.cpp  render_utils.cpp
